# mage

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: HandleMageOptions.cmake  MageBuild.cmake  MageLLVM.cmake  MageLibraryRules.cmake  MageRuleHelpers.cmake  MageRules.cmake  MageTestRules.cmake
docs/: Building.md  BuildingLLVM.md  CodingStandards.md  Developing.md  Roadmap.md
docs/Proposals/: RequirementsAndProfiles.md
include/mage/Foo/: AddOne.hpp  AddTwo.hpp  Bar.hpp
lib/: CMakeLists.txt
lib/Foo/: AddOne.cpp  AddTwo.cpp  Bar.cpp  CMakeLists.txt
unittests/: CMakeLists.txt
unittests/Foo/: AddOneTest.cpp  AddTwoTest.cpp  BarTest.cpp  CMakeLists.txt
